@@ -2,32 +2,37 @@ package ru.ac.checkpointmanager.service.auth;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.data.redis.cache.RedisCacheManager;
 import org.springframework.mail.MailException;
 import org.springframework.mail.MailSendException;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Transactional;
-import ru.ac.checkpointmanager.dto.AuthenticationRequest;
-import ru.ac.checkpointmanager.dto.AuthenticationResponse;
-import ru.ac.checkpointmanager.dto.IsAuthenticatedResponse;
+import ru.ac.checkpointmanager.dto.user.AuthenticationRequest;
+import ru.ac.checkpointmanager.dto.user.AuthenticationResponse;
+import ru.ac.checkpointmanager.dto.user.ConfirmRegistration;
+import ru.ac.checkpointmanager.dto.user.IsAuthenticatedResponse;
 import ru.ac.checkpointmanager.dto.user.LoginResponse;
 import ru.ac.checkpointmanager.dto.user.RefreshTokenDTO;
 import ru.ac.checkpointmanager.dto.user.UserAuthDTO;
+import ru.ac.checkpointmanager.exception.EmailVerificationTokenException;
 import ru.ac.checkpointmanager.exception.UserNotFoundException;
 import ru.ac.checkpointmanager.mapper.UserMapper;
-import ru.ac.checkpointmanager.model.TemporaryUser;
 import ru.ac.checkpointmanager.model.User;
 import ru.ac.checkpointmanager.model.enums.Role;
 import ru.ac.checkpointmanager.repository.UserRepository;
 import ru.ac.checkpointmanager.security.jwt.JwtService;
 import ru.ac.checkpointmanager.security.jwt.JwtValidator;
 import ru.ac.checkpointmanager.service.email.EmailService;
-import ru.ac.checkpointmanager.service.user.TemporaryUserService;
+import ru.ac.checkpointmanager.utils.FieldsValidation;
 import ru.ac.checkpointmanager.utils.MethodLog;
 
 import java.util.Optional;
@@ -43,14 +48,16 @@ import java.util.UUID;
 @Slf4j
 public class AuthenticationServiceImpl implements AuthenticationService {
     public static final String METHOD_WAS_INVOKED = "Method {} was invoked";
+    private static final String USER_NOT_FOUND_MSG = "User with [email=%s] not found";
     private final UserRepository userRepository;
     private final JwtService jwtService;
     private final JwtValidator jwtValidator;
     private final EmailService emailService;
-    private final TemporaryUserService temporaryUserService;
     private final PasswordEncoder passwordEncoder;
     private final AuthenticationManager authenticationManager;
     private final UserMapper userMapper;
+    private final RedisCacheManager cacheManager;
+
 
     /**
      * Предварительная регистрация нового пользователя в системе.
@@ -58,7 +65,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
      * Метод проверяет отсутствие электронной почты в базе данных.
      * <p>
      * Если все проверки пройдены успешно, создается объект {@code TemporaryUser} на основе переданного объекта {@code UserAuthDTO}.
-     * Пароль пользователя шифруется с помощью {@link org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder},
+     * Пароль пользователя шифруется с помощью {@link BCryptPasswordEncoder},
      * устанавливается дата и время создания.
      * Генерируется уникальный токен для верификации, который прикрепляется к письму и отправляется на электронную почту пользователя.
      * Если письмо не отправляется, регистрируется ошибка при отправке.
@@ -69,25 +76,25 @@ public class AuthenticationServiceImpl implements AuthenticationService {
      * @return TemporaryUser, представляющий предварительно зарегистрированного пользователя.
      * @throws IllegalStateException если пользователь с указанным email уже существует.
      * @throws MailSendException     если отправка письма с токеном подтверждения не удалась.
-     * @see TemporaryUser
      * @see UserAuthDTO
-     * @see ru.ac.checkpointmanager.utils.FieldsValidation
+     * @see FieldsValidation
      * @see EmailService
      */
-    @Transactional(isolation = Isolation.READ_COMMITTED)
+    @CachePut(value = "registration", key = "#result.verifiedToken")
+    @Transactional
     @Override
-    public TemporaryUser preRegister(UserAuthDTO userAuthDTO) {
+    public ConfirmRegistration preRegister(UserAuthDTO userAuthDTO) {
         log.debug(METHOD_WAS_INVOKED, MethodLog.getMethodName());
         boolean userExist = userRepository.findByEmail(userAuthDTO.getEmail()).isPresent();
         if (userExist) {
             log.warn("Email {} already taken", userAuthDTO.getEmail());
             throw new IllegalStateException(String.format("Email %s already taken", userAuthDTO.getEmail()));
         }
-        TemporaryUser temporaryUser = userMapper.toTemporaryUser(userAuthDTO);
-        String encodedPassword = passwordEncoder.encode(temporaryUser.getPassword());
-        temporaryUser.setPassword(encodedPassword);
+        ConfirmRegistration confirmUser = userMapper.toConfirmRegistration(userAuthDTO);
+        String encodedPassword = passwordEncoder.encode(confirmUser.getPassword());
+        confirmUser.setPassword(encodedPassword);
         String token = UUID.randomUUID().toString();
-        temporaryUser.setVerifiedToken(token);
+        confirmUser.setVerifiedToken(token);
 
         try {
             emailService.sendRegisterConfirm(userAuthDTO.getEmail(), token);
@@ -97,9 +104,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
             throw new MailSendException("Email sending failed", e);
         }
 
-        temporaryUserService.create(temporaryUser);
-        log.debug("Temporary user {} was saved", temporaryUser.getEmail());
-        return temporaryUser;
+        return confirmUser;
     }
 
     /**
@@ -114,28 +119,25 @@ public class AuthenticationServiceImpl implements AuthenticationService {
      *
      * @param token токен подтверждения регистрации.
      * @throws UserNotFoundException если пользователь с указанным токеном не найден.
-     * @see TemporaryUser
      * @see User
      * @see JwtService
      */
+    @CacheEvict(value = "registration", key = "#token")
     @Transactional(isolation = Isolation.READ_COMMITTED)
     @Override
     public void confirmRegistration(String token) {
         log.debug(METHOD_WAS_INVOKED, MethodLog.getMethodName());
-        TemporaryUser tempUser = temporaryUserService.findByVerifiedToken(token);
-
-        User user = userMapper.toUser(tempUser);
+        Optional<ConfirmRegistration> confirmUser = Optional.ofNullable(
+                        cacheManager.getCache("registration"))
+                .map(cache -> cache.get(token, ConfirmRegistration.class));
+        if (confirmUser.isEmpty()) {
+            throw new EmailVerificationTokenException(String.format("Invalid or expired token %s", token));//TODO handle
+        }
+        User user = userMapper.toUser(confirmUser);
         user.setRole(Role.USER);
         user.setIsBlocked(false);
-
         userRepository.save(user);
         log.debug("User registration completed successfully for {}", user.getEmail());
-
-        temporaryUserService.delete(tempUser);
-        log.debug("Temporary user {} was deleted", tempUser.getEmail());
-
-        jwtService.generateToken(user);
-        log.debug("Access token for {} created", user.getEmail());
     }
 
     @Override
@@ -163,7 +165,6 @@ public class AuthenticationServiceImpl implements AuthenticationService {
      * @see UsernamePasswordAuthenticationToken
      */
     @Override
-    @Transactional(isolation = Isolation.READ_COMMITTED)
     public LoginResponse authenticate(AuthenticationRequest request) {
         log.debug("Method {}, Username {}", MethodLog.getMethodName(), request.getEmail());
         Authentication authentication = authenticationManager.authenticate(
@@ -173,7 +174,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
                 ));
         User user = (User) authentication.getPrincipal();
 
-        String jwtToken = jwtService.generateToken(user);
+        String jwtToken = jwtService.generateAccessToken(user);
         String refreshToken = jwtService.generateRefreshToken(user);
         log.debug("Access and refresh tokens for {} created", user.getEmail());
 
@@ -184,31 +185,29 @@ public class AuthenticationServiceImpl implements AuthenticationService {
     }
 
     /**
-     * Обновляет токен доступа пользователя.
+     * Обновляет токен доступа пользователя на основе предоставленного токена обновления.
      * <p>
-     * Этот метод получает токен обновления из тела запроса, проверяет его валидность, и
-     * если токен действителен, генерирует новый токен доступа, отзывает все предыдущие токены пользователя и сохраняет новый токен.
-     * Затем метод создает новый объект {@code AuthenticationResponse} с новым токеном доступа и токеном обновления,
-     * преобразует его в JSON и возвращает для представления пользователю
+     * Метод выполняет проверку токена обновления и, при успешной валидации,
+     * извлекает идентификатор пользователя из токена. Затем осуществляется поиск пользователя в репозитории.
+     * Если пользователь найден, генерируется новый токен доступа.
      * <p>
-     * После успешной валидации производится проверка, существует ли пользователь в базе данных, если да то продолжаем работу,
-     * если нет то:
      *
-     * @throws UsernameNotFoundException если юзер из jwt не существует в бд
-     * @see JwtService#extractUsername(String)
+     * @param refreshTokenDTO Объект {@link RefreshTokenDTO}, содержащий токен обновления.
+     * @return {@link AuthenticationResponse}, содержащий новый токен доступа и токен обновления.
+     * @throws UserNotFoundException если пользователь не найден.
      */
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public AuthenticationResponse refreshToken(RefreshTokenDTO refreshTokenDTO) {
         log.debug(METHOD_WAS_INVOKED, MethodLog.getMethodName());
         final String refreshToken = refreshTokenDTO.getRefreshToken();
         jwtValidator.validateRefreshToken(refreshToken);
-        String userEmail = jwtService.extractUsername(refreshToken);
-        User user = this.userRepository.findByEmail(userEmail).orElseThrow(() -> {
-            log.warn("User with email - '%s', not found ".formatted(userEmail));
-            return new UsernameNotFoundException("User with email - '%s', not found ".formatted(userEmail));
+        String username = jwtService.extractUsername(refreshToken);
+        User user = userRepository.findByEmail(username).orElseThrow(() -> {
+            log.warn(USER_NOT_FOUND_MSG.formatted(username));
+            return new UserNotFoundException(String.format(USER_NOT_FOUND_MSG.formatted(username)));
         });
-        String accessToken = jwtService.generateToken(user);
+        String accessToken = jwtService.generateAccessToken(user);
         return new AuthenticationResponse(accessToken, refreshToken);
     }
 }
